objects/Authorized_clients__c.object
<CustomObject>
    <fields>
        <fullName>Authorized_clients_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized clients</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Authorized test centers</relationshipLabel>
        <relationshipName>Authorized_clients1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hide_from_others__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide from others</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_from_web__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide from web</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Authorized clients</relationshipLabel>
        <relationshipName>Authorized_clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Authorized clients</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Authorized clients Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorized clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>